# gpycraft-1.0.0

./: .readthedocs.yaml  MANIFEST.in  README.md  api.py  app_config.yaml  begin.py  craftapi.py  credentials.json  eoyconvert.py  formatted_output_file.csv  new.csv  new.rtf  new.txt  output.rtf  pyproject.toml  requirements.txt  sensor1.txt  sensor1.xlsx  setup.py  test.py  wea.txt  workfile.py
_METADATA/: FILEMETADATA.txt  sensor1.json
catalog/: document.yaml
docs/: gpycraft.fireStore.rst  gpycraft.googleSheet.rst  gpycraft.rst  make.sh  modules.rst  requirements.txt
docs/source/: conf.py  firebase.rst  googlesheet.rst  index.rst
docs/source/_static/: custom.css
dossier/: new.txt
googlepycraft.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
googlepycraft/fireStore/: firestoreupload.py
googlepycraft/googleSheet/: __init__.py  gsheetsdb.py
gpycraft/: __init__.py  app_config.py  begin.py
gpycraft/fileIO/: dotstacks.py  filecraft.py  radix.py
gpycraft/fireStore/: firestoreupload.py
gpycraft/googleSheet/: gsheetsdb.py
log/: None.log.1
